Catering the talk for the DC crowd.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<section>
 					<h2>About Me</h2>
 					<ul>
-						<li>Graduate of AiPH</li>
+						<li>Help organize WordPress DC</li>
 						<li>Formerly at USNews.com</li>
 						<li>Lead Developer at PewResearch.org</li>
 					</ul>
